<resources>
    <string name="app_name">The Hive Shop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_password">New password</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome_back">Welcome\nback</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="retype_pasword">Retype Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="cart">Cart</string>
    <string name="buy">Buy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="gender">Gender</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="change_password">Change Password</string>
    <string name="login_failed">Email or password is incorrect</string>
    <string name="update_profile_failed">User not found</string>
    <string name="coincide_email">Email is already taken</string>
    <string name="connect_failed">Can\'t connect to server</string>
    <string name="invalid_email">Wrong email format</string>
    <string name="not_match_pass">Retyped password isn\'t matched with password</string>
    <string name="invalid_pass_condition">Password must contains 8 to 20 characters</string>
    <string name="empty_error">This field cannot be empty</string>
    <string name="item_1">Item 1</string>
    <string name="no_results">No results 😓</string>
    <string name="retry">Retry</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="failed">Failed!</string>
    <string name="success">Success!</string>
    <string name="old_pass_wrong">Your old password is wrong</string>
    <string name="done">Done</string>
    <string name="amount_to_be_paid">Amount to be paid:</string>

    <array name="gender">
        <item name="male">Male</item>
        <item name="female">Female</item>
    </array>
</resources>