<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_marginHorizontal="20dp"
    android:padding="20dp"
    android:layout_width="350dp"
    android:layout_height="wrap_content">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="Title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_dialog_1"
        style="@style/Widget.HiveShop.TextInputLayout.OutlineBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_dialog_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <com.google.android.material.button.MaterialButton
            android:layout_marginHorizontal="20dp"
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            app:backgroundTint="@color/colorPrimaryDark" />

        <com.google.android.material.button.MaterialButton
            android:layout_marginHorizontal="20dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:id="@+id/btn_confirm"
            android:textColor="@color/colorPrimaryDark"
            app:backgroundTint="@color/colorAccent"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>